Ejercicio ajax terminado

--- a/TRI2/Javascript/AJAX/Ejercicio/index.html
+++ b/TRI2/Javascript/AJAX/Ejercicio/index.html
@@ -14,7 +14,7 @@
         <option value="3117814">Lugo</option>
         <option value="3128760">Barcelona</option>
     </select>
-    <input type="submit" id="btn-submit" onclick="getWeatherData()" value="CONSULTAR">
+    <input type="submit" id="btn-submit" value="CONSULTAR">
     
     <div class="showWeather">
         <h1 class="name"></h1>
