--- a/TRI2/Javascript/AJAX/Ejercicio/index.html
+++ b/TRI2/Javascript/AJAX/Ejercicio/index.html
@@ -21,6 +21,7 @@
         <p class="text"></p>
         <span class="temperature"></span>
         <p class="description"></p>
+        <img src="" id="icon">
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
